Fix: z-index issue of shedding light on top of hero image.

--- a/assets/src/blocks/HeroImage/scss/hero-image.scss
+++ b/assets/src/blocks/HeroImage/scss/hero-image.scss
@@ -8,6 +8,12 @@
   padding: 0;
 }
 
+.page-template {
+  .hero {
+    z-index: 1;
+  }
+}
+
 .hero {
   min-height: 500px;
   background-size: cover;
